--- a/sextant/public/index.html
+++ b/sextant/public/index.html
@@ -24,7 +24,9 @@
     -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300,700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;700&family=Lato:wght@100;400;900&display=swap"
+    rel="stylesheet">
   <title>Sextant</title>
 </head>
 
